@@ -98,12 +98,15 @@ $tpl->assign(
 		'TR_SENDER_NAME' => tr('Sender name'),
 		'TR_UPDATE' => tr('Update'),
 		'TR_USERTYPE' => tr('User type (admin, reseller, user)'),
-		'TR_BASE_SERVER_VHOST' => tr('URL to this admin panel'),
 		'TR_BASE_SERVER_VHOST_PREFIX' => tr('URL protocol'),
+		'TR_BASE_SERVER_VHOST' => tr('URL to this admin panel'),
+		'TR_BASE_SERVER_VHOST_PORT' => tr('URL port'),
 		'SUBJECT_VALUE' => tohtml($data['subject']),
 		'MESSAGE_VALUE' => tohtml($data['message']),
 		'SENDER_EMAIL_VALUE' => tohtml($data['sender_email']),
-		'SENDER_NAME_VALUE' => tohtml($data['sender_name'])));
+		'SENDER_NAME_VALUE' => tohtml($data['sender_name'])
+	)
+);
 
 generatePageMessage($tpl);
 
