@@ -115,8 +115,9 @@ $tpl->assign(
 		'TR_SENDER_EMAIL' => tr('Sender email'),
 		'TR_SENDER_NAME' => tr('Sender name'),
 		'TR_UPDATE' => tr('Update'),
-		'TR_BASE_SERVER_VHOST' => tr('URL to this admin panel'),
 		'TR_BASE_SERVER_VHOST_PREFIX' => tr('URL protocol'),
+		'TR_BASE_SERVER_VHOST' => tr('URL to this admin panel'),
+		'TR_BASE_SERVER_VHOST_PORT' => tr('URL port'),
 		'TR_CANCEL' => tr('Cancel')
 	)
 );
