@@ -4,6 +4,9 @@
 Git 1.2.x
 ------------------------------------------------------------------------------------------------------------------------
 
+FRONTEND
+	Fixed: Wrong URL in default email templates ( Missing port )
+
 INSTALLER
 	Added: panel_ports item for the --reconfigure command line option
 
